# cryptocurrency-service

./: .gitignore  Dockerfile  LICENSE  README.md  assignment-requirements.txt  config.py  github.txt  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
app/: main.py
students/: 25235490.py  25605217.py  25657673.py  student_template.py
